@@ -102,6 +102,7 @@ Changes in FLTK 1.4.0					Released: ??? ?? 2019
   Other Improvements
 
   - (add new items here)
+  - Fl_Roller can now be controlled via the mouse wheel (STR #3120).
   - Tooltips hide by themselves after 12 seconds (STR #2584).
   - Added widget visibility indicator to Fluid (STR #2669).
   - Added Fl_Input_::append() method (STR #2953).
